Readme changes and got rid of jaxb-api